unpackaged/main/default/objects/CustomStoreGroup__c/CustomStoreGroup__c.object-meta.xml
<CustomObject>
    <label>Custom Store Group</label>
    <nameField>
        <label>Custom Store Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Store Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>