unpackaged/main/default/objects/CustomStoreGroup__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Store Groups</relationshipLabel>
    <relationshipName>CustomStoreGroup</relationshipName>
    <type>Lookup</type>
</CustomField>