unpackaged/main/default/objects/CustomStoreGroup__c/fields/CustomStoreGroupID__c.field-meta.xml
<CustomField>
    <fullName>CustomStoreGroupID__c</fullName>
    <externalId>true</externalId>
    <label>Custom Store Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>