unpackaged/main/default/objects/CustomStoreGroup__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Custom Store Group</relationshipLabel>
    <relationshipName>CustomStoreGroup</relationshipName>
    <type>Lookup</type>
</CustomField>