unpackaged/main/default/objects/CustomStoreGroup__c/fields/TypeID__c.field-meta.xml
<CustomField>
    <fullName>TypeID__c</fullName>
    <label>Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>